# kaggle_titanic_exercise

./: .gitignore  README.md  data.dvc  pyproject.toml
.dvc/: config
notebooks/: 01.Data_integrity.ipynb
