[tool.poetry]
name = "kaggle-titanic-exercise"
version = "0.1.0"
description = ""
authors = ["Edwar Girón <edwar.giron@chiper.co>"]
readme = "README.md"
packages = [{include = "kaggle_titanic_exercise"}]

[tool.poetry.dependencies]
python = ">=3.9.*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
