[tool.poetry]
name = "kaggle-titanic-exercise"
version = "0.1.0"
description = ""
authors = ["Edwar Girón <edwar.giron@chiper.co>"]
readme = "README.md"
packages = [{include = "kaggle_titanic_exercise"}]

[tool.poetry.dependencies]
python = ">=3.9.*, <4"


[tool.poetry.group.notebooks.dependencies]
jupyterlab = "^3.6.1"
dvc = "^2.45.1"
dvc-gdrive = "^2.19.1"
pandas = "^1.5.3"
deepchecks = "^0.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
